# ChangeLog for dev-ruby/rdtool
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rdtool/ChangeLog,v 1.59 2013/09/23 06:12:58 graaff Exp $

  23 Sep 2013; Hans de Graaff <graaff@gentoo.org> rdtool-0.6.38.ebuild:
  Add x86 keyword because it is signed off in bug 475978 comment 2.

  29 Aug 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for ia64, wrt bug #475978

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for sparc, wrt bug #475978

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for alpha, wrt bug #475978

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for ppc64, wrt bug #475978

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for ppc, wrt bug #475978

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rdtool-0.6.38.ebuild:
  Stable for amd64, wrt bug #475978

  06 Jul 2013; Hans de Graaff <graaff@gentoo.org> -rdtool-0.6.22-r2.ebuild,
  -rdtool-0.6.37.ebuild:
  Cleanup.

  21 Apr 2013; Hans de Graaff <graaff@gentoo.org> rdtool-0.6.38.ebuild:
  Fix building with USE=doc, bug 465378.

*rdtool-0.6.38 (03 Dec 2012)

  03 Dec 2012; Hans de Graaff <graaff@gentoo.org> +rdtool-0.6.38.ebuild:
  Version bump.

*rdtool-0.6.37 (29 Sep 2012)

  29 Sep 2012; Hans de Graaff <graaff@gentoo.org> +rdtool-0.6.37.ebuild:
  Version bump.

*rdtool-0.6.22-r2 (29 Jul 2012)

  29 Jul 2012; Hans de Graaff <graaff@gentoo.org> +rdtool-0.6.22-r2.ebuild:
  Drop dependency on dev-ruby/amstd since the code does not reference it at
  all. Add other ruby targets blocked by that.

  08 Mar 2012; Naohiro Aota <naota@gentoo.org> rdtool-0.6.22-r1.ebuild:
  Add ~x86-fbsd.

  08 Mar 2012; Hans de Graaff <graaff@gentoo.org> -rdtool-0.6.20.ebuild:
  Remove old version.

  08 Mar 2012; Brent Baude <ranger@gentoo.org> rdtool-0.6.22-r1.ebuild:
  Marking rdtool-0.6.22-r1 ppc64 for bug 394231
