@@ -2,16 +2,14 @@
 Hash: SHA256
 
 AUX 50rdtool-gentoo.el 174 SHA256 2a26646bbe75ca9b4225099729384a81a25745ac4ffe33b4b1c0274a275d61e5 SHA512 77e893e6c9660b8a6cb2b8e7d1134867c4e9d38acbf11db4ee948f288b69dfe3a938ab0d37bca7b4b9da2f6ca27fa27e2d9c17629ef3c0d49797f65c036c472f WHIRLPOOL 17b4f47473db3a8e5791911cffc91542be95d188bd566935420b2e8ce615ac221fcf79674edc1200282a0589bba74d453e86d7a32e462d8f67fade61ff25c57f
-DIST rdtool-0.6.22.tar.gz 89524 SHA256 11c528e739ed5c08728b9eaf17ff56e9a5b8e46b31c968874a1dcc5a5c350068 SHA512 66c1ad9c9bc0447bcd16712c6dbd31ccac1df8fd0b566baeda158f40dadb320a6104c673ea19d25b523a2700b58187fe0a01e577de52f55f7e6841fe61bf5802 WHIRLPOOL 04053344da6531d647a84d70c75bb8d7a528a900a1078e493fd59c014655755a1f1a6887511f73b0467de9ecf8a397c8e21908464f35c150f92d705321ceff5e
 DIST rdtool-0.6.38.gem 115712 SHA256 d9d32e215c1958847001ca5940ad42aa8bcbdf984436f1235b9dbd300e4c74bc SHA512 958e9066a8b3610eb1a78069e615c5bd672aa56b3b45669604b35cd094bb8ddc549d8f373d1ee53864c27a0aa7ee038101b3256c56b3b8ffe618f75a1a939bcd WHIRLPOOL 2f066ce8d5dc91059ef74f5ec8f65aa2234afe3b615690e316f2ec8522df4b6aaafae0f041a0f3110be5b2ee77c0ff9ae0a703613ca2f45ab0ad324c0dac70da
-EBUILD rdtool-0.6.22-r1.ebuild 1228 SHA256 2d455ea9e8bb5c6e4c124c2f4045afc53ba0ba5d11a56bf6a0505b70c9e1a9f8 SHA512 5f5be6b5aad3f3c5c9636a19c450552765ba6f735a58ea4ff9a7b0da6e97edc1f7d3cc8e7aac544740414acc89126a23b56e1f6dfe1873b10fc4f2a8a8eb474e WHIRLPOOL bfb46298de1ad5df99aa0e62dbb25330e306ef291780965cfdc525f4eeba53eb8b3d503fdf7b0023540bb56f00ae20d3dc18266e819e854dc571dca5dcc2b8f5
 EBUILD rdtool-0.6.38.ebuild 912 SHA256 983c689e712c080a4d5e8f20edb3bea3b35ac176e4c0d4c374e6a5f699f1c8e7 SHA512 ef55403124a023b9bfc9546b79e43537802025c6138828b2a71fa9e9a188ff0a045ff353390be176a058f90a6852f8e167190ef82303a3d9d33725f21396d394 WHIRLPOOL 0b9846fcbc0e08a2f1707d3bee6f1c98085c9a51bd02aad8762568afa84141b14a7298a4a475176e40da6a3af65a389113f034baa467a70e24e004d9023e6a9b
-MISC ChangeLog 7763 SHA256 91f34a505c1c99dd4b566fbaadc4a3016977ef8c4f8bbc440b1abdf4c5291efd SHA512 90f0910dae2e7903b215b82fbd7cc761530a14d38d13696403445ef73b755db55d38d3014d25424a6abc0b591cd3ee7cb84f694a85d5e6b8c4e7cb1022ff2010 WHIRLPOOL 0fa03bf24dee82184e8e06d7a450d88da594a81bb28911814421ada55383ef2bf6ad6ba64fd46b7d021bac405688395e95be2ae7f43bafc227c928915d9dfcad
+MISC ChangeLog 7851 SHA256 d8e03f5aeab8caab1da12abf9606133670287ae4e49143dbe480b55f288143e8 SHA512 73584c8d6d3345dd0203cdb54b942dcc97ac65233a37c18a15946b4a1f4846bd6995d2cc496093cee4f493e7874f370a6b5f343b1a24ef519c275a138cdccc53 WHIRLPOOL 4104784a7b76ce6e551c834212ce0399c12fe3008559fc54c8d18a98eaf7879773f9a53a487db0c5287dfc5ef08c5725847cba53940f80f72e7d9f62cf038fa0
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlI/2+sACgkQiIP6VqMIqNfS/gD/farVrj/B0nGFT8d1LCMcZcB5
-61Z+8eqe71pqmwXmPRwA/iGC0vLelCiQ1lf6KE8R2VNQxlDlIuikss+r5kI/1tTO
-=+ljb
+iF4EAREIAAYFAlJjc80ACgkQiIP6VqMIqNfx0wD/Xdt8iUM6fEarQ3BBUkD/Na9b
+Svcfzr2/c56OPdFoyIgA/j1frw9LSxkaJxWBV2e8j+4pjFTKrELs/f1ljzyrJUXn
+=scKT
 -----END PGP SIGNATURE-----
