@@ -4,15 +4,17 @@ Hash: SHA256
 DIST selenium-webdriver-2.34.0.gem 2849792 SHA256 1d066ab454f0e92d1637e60535010868ba6e70dc358f82ee853d0eb01000900b SHA512 88d53afdc6aa8abe71fcde8f01588b28d5e6ab1f38900898b13860e54453c472866a46c3f51004b248d8070a17a93cf90aef48c22b75aac76fd64e34eb6bf28d WHIRLPOOL 7229a6e5ef7b26dfec1c7e1d1718080c64844997353c2a718ae1286a27be3dff8f4fe86e12f9b31f47ca0b83785f4acd2aee9710fa4b971391b154f78a163ef5
 DIST selenium-webdriver-2.35.0.gem 2852864 SHA256 f5285c5afc625034f4c5a791c8dc44a77fbd2180196f0b6b38451ac1a53d37f9 SHA512 1f10ae63d61abcd2c07834b7127fc846a2341d35d15b08cd4bd1cfed2428dbd98deb9ea03f3abb4ad93fa74f61b4a1a341387ad1e7e3bf1b83d4f1292735ed71 WHIRLPOOL cc33087922fefbdc87910b5b17317cadd488891b8074ff5cd426e7143a87386f426a2ac3d5e3eb2b00b0ed5c8df139e490247a8ace07231d6137f93143d80e06
 DIST selenium-webdriver-2.35.1.gem 2849280 SHA256 46629623f525ab0c2fa2705b75327ee586c1ed7aced820763369ad69e0b2a108 SHA512 b37083dfb94d278922e1512cde0bd89511c2c5b798dccf9ef204df2ca4a4b9e1ce2c06b1d41f2a89bfcd284bb9c6224203ef047af30aa3a9aa19669d2452527a WHIRLPOOL d4a882719da56f041b06f5eb9058e9305f551191add9d1b261a3f0b05657d2a789a89336aec0310c457c18e6436b9ebed2f280039612f1032d0745bfa396852e
+DIST selenium-webdriver-2.37.0.gem 2914304 SHA256 564f87ffd70fba9d6059b99a73a72f5c1065f5070440dcd9117ed87032afa3ca SHA512 aeb2b70a4f9d0d80cc6755f0c7847c8d269a37e72b740745975f9db66ad86fccf4f439112b820ced2b0ab70031a43211527795556415ce5b60b404ca3087e5ce WHIRLPOOL 6ad357d01557aa7e66f47bcd717e3b4c2788cfb0f71f33df553bc912e3a4d2c5a8d044145e7cfe501bbf66cd883e0ba1c6d1514e195519520370cfea36916b5a
 EBUILD selenium-webdriver-2.34.0.ebuild 1292 SHA256 7d118cf272932e42f59dc52bafc1852c72b8077aba7e4412e2c991e8fe05223d SHA512 fa1456d598f76815b3716c284318082af12dc7f7adae14ef7779f16a5f677aaf1214a9793b61ba78314e71bc21544bc968a936fb2e680c4ff4b20294ae134770 WHIRLPOOL 9bc238b6cf895fbc807460d7c257a30e37f2b47fd381a069c8f89afb207fc65c8a572fd8857867899f645d1a960120ac45e9eb7fdedaa4ade423f8b570913893
 EBUILD selenium-webdriver-2.35.0.ebuild 1292 SHA256 f0d8cc4bdd1211ea08fb9bdaf9d31565f91fe8c58fa6565b713e39a9e9c9c3fc SHA512 49c5b2df65a91d25f9fe5bd91a7357fae291e63d692acf3f5995a83a7f84b5ec5d631e7917c95830cf0cc3b955a4b8dd29fb17f61dc11dc8ff0bb364d6ec0f2d WHIRLPOOL c20695b9d686443377f6af998630b50f4c0aa5c0bc1120a67be1cddd382bcccd334d4cefe6e78ada4334fe33cf208be5346f1480eca744d9a3e2565ffa6f485a
 EBUILD selenium-webdriver-2.35.1.ebuild 1294 SHA256 2fa718747be67605bf09e819b2b47e00117bffa7e8b4ddf5743045e4f6a0a50c SHA512 67cd9a7294d2db7bed83e4767dd4b4cd0351ab48a921122f165c4ca6220bd61cbe60bb786c88bdd1f1d4e230ac307cab97f4fdd3e9c518aea713e14067090d87 WHIRLPOOL 94fef12fd959d893d6747d3f1779610d993610f38a661d60d64f524f4deb543390b0dc55271a7926f4fd20148f3b09be052b95c44800c53710716628c331d711
-MISC ChangeLog 8025 SHA256 f7f97232acab3fd2190292e15be83e0e131054e1340a087aaabf85c2ed3ce1d5 SHA512 0e8e74b3c0a95472536d45d04e2c9cf0d83f81ecdd5bbe3bd7d32f7d684d75d88d0531790a1f131a90220e5fe1fe82ff98cbbd4f26425efa1de808f6c2fa1de1 WHIRLPOOL 83950d97df8f59dac3543ecbc9048322661d0b31e21256407f178b4cce9360e15d3243afa24656dbbc55c05a9657ded22470812c46d7ab21d774ef1c6e2c164c
+EBUILD selenium-webdriver-2.37.0.ebuild 1294 SHA256 aa41d3ecb37e3f203756c9a6f7b63634fb36e0f8ce2c7bc484c9ba4d54ff7e1a SHA512 1950dd8671ff7d36a9fc0e690b2e6a141ac9ca95e4716a9b64696927817b4481d94ec525a5b0e7ce72c3e081bd93020dc33fd9ddefbf17a1b7de3427e3a11397 WHIRLPOOL 16e6c5cb8c252ae8691a88a6ea535c8f55562cf6d72276eb9f75de166698085d4885af4978e2280263596688b33a10c65a996d7574fb77b3895eb350cf58ab43
+MISC ChangeLog 8171 SHA256 cf8b0671f72e1453bde4da4a502a05f166b2e2f188a70b4def9daf917899a29b SHA512 0b9e84cce2ecf26df685bacab779968504a2380b6a720635ba1067855f4070a3f31cdc0fdc163f35f75108c6f8afe5b4e636fe429e0a0224bd42801edd6886d8 WHIRLPOOL d3cb7ca7d296034599aca2dd1c5776bd26cf5ae1e5e393e54354b94a97b6cfdf946b4d7c335682e6086676a418f4e59e26ca35f8b64137abb690a13266a0d2ff
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJjb5oACgkQiIP6VqMIqNfm/gEAlxBn6n/RQNZC4eogIk3Kvbyx
-tRHxKlR9r4vug2uK4W0BAJZvwWbCbQvpv1PYx+BCenzewGF/46Og8eLFLSFBocbu
-=RPAZ
+iF4EAREIAAYFAlJjci4ACgkQiIP6VqMIqNezcgD/ZrhGZ/GxclcxEqiVTv76HZDz
+F7E3DdvlnOVfZMpLgKgA+gKAPI3h+wfeV/aSpr7kXwqKdxAtF8AAJPRyq5WqxqgY
+=1K52
 -----END PGP SIGNATURE-----
