@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby18? ( dev-ruby/amstd[ruby_targets_ruby18] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 )
-DESCRIPTION=A multipurpose documentation format for Ruby
-EAPI=2
-HOMEPAGE=http://raa.ruby-lang.org/project/rdtool
-IUSE=emacs test elibc_FreeBSD ruby_targets_ruby18
-KEYWORDS=alpha amd64 ia64 ppc ppc64 sparc x86 ~x86-fbsd
-LICENSE=Ruby GPL-2
-RDEPEND=emacs? ( virtual/emacs ) ruby_targets_ruby18? ( dev-ruby/amstd[ruby_targets_ruby18] ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 )
-SLOT=0
-SRC_URI=http://www.moonwolf.com/ruby/archive/rdtool-0.6.22.tar.gz
-_eclasses_=elisp-common	57a17c02cd0f6f0c423e3d6de5c83f13	eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=5d55d7ef3eefe2cbee35953779a22f45
