@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/selenium-webdriver
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/selenium-webdriver/ChangeLog,v 1.50 2013/10/20 05:52:20 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/selenium-webdriver/ChangeLog,v 1.51 2013/10/20 06:03:25 graaff Exp $
+
+*selenium-webdriver-2.37.0 (20 Oct 2013)
+
+  20 Oct 2013; Hans de Graaff <graaff@gentoo.org>
+  +selenium-webdriver-2.37.0.ebuild:
+  Version bump.
 
   20 Oct 2013; Hans de Graaff <graaff@gentoo.org>
   -selenium-webdriver-2.31.0.ebuild, -selenium-webdriver-2.32.1.ebuild,
